# climate_chamber_control_lib

./: .gitignore  .gitmodules  CMakeLists.txt  ClimateChamber.py  LICENSE  README.md  build_local.sh  compile.ps1  compile.sh  setup.py
.github/workflows/: mac_os_latest.yml  ubuntu_latest.yml  windows_latest.yml
cmake/: build_config.cmake
include/: ClimateChamberControl.h  ClimateChamberDefines.h  ClimateChamberWrapper.h  ClimateChamberWrapperDefines.h  CommandCreator.h  CommandParser.h  Util.h
include/helperFiles/: Logging.h  Socket.h
python_interface/: CMakeLists.txt  pybind_wrapper.cpp
src/: ClimateChamberControl.cpp  ClimateChamberWrapper.cpp  CommandCreator.cpp  CommandParser.cpp  Logging.c  Socket.c  Util.cpp
test/: Main.cpp
